@@ -11,7 +11,7 @@
 use strict;                     # restrict unsafe constructs
 use warnings;                   # enable optional warnings
 
-use Test::More tests => 4 * 2;
+use Test::More tests => 16;
 
 use Math::BigFloat only => 'Calc';
 use Math::BigInt;
@@ -22,15 +22,14 @@ my $mbi = "Math::BigInt";
 # 2 ** 240 =
 # 1766847064778384329583297500742918515827483896875618958121606201292619776
 
-# takes way too long
-#test_broot('2', '240', 8, undef,
-#           '1073741824');
-#test_broot('2', '240', 9, undef,
-#           '106528681.3099908308759836475139583940127');
-#test_broot('2', '120', 9, undef,
-#           '10321.27324073880096577298929482324664787');
-#test_broot('2', '120', 17, undef,
-#           '133.3268493632747279600707813049418888729');
+test_broot('2', '240', 8, undef,
+           '1073741824');
+test_broot('2', '240', 9, undef,
+           '106528681.3099908308759836475139583940127');
+test_broot('2', '120', 9, undef,
+           '10321.27324073880096577298929482324664787');
+test_broot('2', '120', 17, undef,
+           '133.3268493632747279600707813049418888729');
 
 test_broot('2', '120', 8, undef,
            '32768');
@@ -47,6 +46,10 @@ sub test_broot {
     my $s = $scale || 'undef';
     is($mbf->new($x)->bpow($n)->broot($y, $scale), $expected,
        "Try: $mbf->new($x)->bpow($n)->broot($y, $s) == $expected");
+
+    # Math::BigInt returns the truncated integer part of the output, so remove
+    # the dot an anything after it before comparing.
+
     $expected =~ s/\..*//;
     is($mbi->new($x)->bpow($n)->broot($y, $scale), $expected,
        "Try: $mbi->new($x)->bpow($n)->broot($y, $s) == $expected");
