@@ -1,5 +1,7 @@
 2018-03-17 v1.999812 pjacklam
 
+ * Include tests that were previously commented out.
+
  * Use config() as a method, rather than a function. Also use config("xyz")
    rather than config()->{xyz}.
 
